# point-cloud-viewer

./: .gitignore  CMakeLists.txt  README.md
data/: bildstein_station1_sample1.txt
src/: PointCloud.cpp  PointCloud.hpp  main.cpp
